[gd_scene load_steps=4 format=3 uid="uid://cju563jp4dh4h"]

[ext_resource type="Theme" uid="uid://dijqjy6cqknsb" path="res://assets/themes/ui_theme.tres" id="1_t3thu"]
[ext_resource type="Script" path="res://scenes/menu/game_options/game_options.gd" id="2_f83iy"]
[ext_resource type="PackedScene" uid="uid://dx3j6taat0hti" path="res://scenes/ui/button/button.tscn" id="3_d2pc7"]

[node name="GameOptions" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t3thu")
script = ExtResource("2_f83iy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleHBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
text = "Options"
vertical_alignment = 1

[node name="CloseButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleHBox" instance=ExtResource("3_d2pc7")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = " X "

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsVBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MusicVolumeContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox/MusicVolumeContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox/MusicVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 50.0

[node name="SFXVolumeContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox/SFXVolumeContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "SFX volume"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox/SFXVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 50.0

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TitleHBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsVBox/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
